--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,8 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^8.56.0",
+    "eslint-plugin-react": "^7.33.2",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.9",
     "react-router-dom": "^6.20.1",
