--- a/backend/package.json
+++ b/backend/package.json
@@ -61,12 +61,13 @@
     "helmet": "^4.1.0",
     "http-status": "^1.4.0",
     "joi": "^17.3.0",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.24.0",
     "mongoose": "^5.7.7",
+    "mongoose-aggregate-paginate-v2": "^1.0.7",
     "morgan": "^1.9.1",
     "nodemailer": "^6.3.1",
-    "passport": "^0.4.0",
+    "passport": "^0.7.0",
     "passport-jwt": "^4.0.0",
     "pm2": "^5.1.0",
     "postcss": "^8.4.32",
